src/test/deca/syntax/valid/parser/oracle/classes_with_fields_and_methods.deca
class A{
	float f(int x){
		return x;
	}
	int x;
}

class X{
	protected int x;
	float f = 1.0;

	float f(int x, float f) asm("Hello World !");

	protected boolean b;
}