src/test/deca/syntax/invalid/parser/oracle/field_ident2.deca
class A { int 0 = 1;}